School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_comparaisons/comp_onVerra.deca
//Test de deux opérateurs à la suite
//erreur attendue : one operator is not an Arith type in AbstractOpCmp

{
    boolean b = 10.5 > (10<11);
}